# AI_test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows-installer.yml
config/: regions.example.json  settings.example.json
mouse_video_analyzer/: .gitignore  README.md  requirements.txt  run.py
mouse_video_analyzer/app/: analysis.py  gui.py  main.py  tracker.py
mouse_video_analyzer/tests/: test_analysis.py  test_tracker.py
packaging/: entrypoint.py  gui_entrypoint.py  installer.iss  write_build_info.py
src/svtracker/: __init__.py  app.py  cli.py  config.py  version.py
src/svtracker/capture/: auto_layout.py  crest_reader.py  ocr_reader.py  presets.py  screen_capture.py  stability.py  window_finder.py
src/svtracker/cards/: card_database.py  card_fetcher.py  card_matcher.py  hashing.py  models.py  name_matcher.py
src/svtracker/game/: event_detector.py  match_tracker.py  models.py
src/svtracker/gui/: log_handler.py  main_window.py  region_canvas.py
src/svtracker/prediction/: advisor.py  predictor.py
src/svtracker/storage/: match_log.py
tests/: test_advisor.py  test_auto_layout.py  test_card_database.py  test_card_fetcher.py  test_card_matcher.py  test_crest_reader.py  test_match_log.py  test_match_tracker.py  test_name_matcher.py  test_ocr_reader.py  test_play_reveal.py  test_predictor.py  test_presets.py  test_region_set.py  test_settings.py  test_stability.py  test_version.py
